--- a/MemeApp/src/views/auth/signup.ejs
+++ b/MemeApp/src/views/auth/signup.ejs
@@ -43,7 +43,7 @@
   <div class="z-10 bg-black/40 backdrop-blur-xl border border-purple-500/20 p-10 rounded-3xl shadow-neonPurple max-w-md w-full animate-pulse3D">
     <h1 class="text-center text-4xl font-bold bg-gradient-to-r from-purple-300 via-white to-purple-300 bg-clip-text text-transparent tracking-wider drop-shadow-2xl mb-8">Sign Up</h1>
 
-    <form action="/auth/register" method="POST" class="space-y-6">
+    <form action="/auth/register" method="POST" class="space-y-6 pb-4">
       <div>
         <label for="username" class="block text-sm font-semibold uppercase tracking-wide text-gray-200 mb-2">Username</label>
         <input type="text" id="username" name="username" required class="w-full px-4 py-3 rounded-lg bg-white/5 text-white border border-purple-500/20 focus:outline-none focus:ring-2 focus:ring-purple-500"/>
